--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "stripe": "^8.150.0",
+    "uuid": "^8.3.2"
   }
 }
